<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jjswigut.home.HomeFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/welcomeHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:gravity="center"
        android:text="@string/welcome_message"
        android:textSize="@dimen/regular_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:text="@string/groups"
        android:textSize="@dimen/regular_header"
        app:layout_constraintBottom_toTopOf="@id/groupRecyclerView"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/groupRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="@dimen/standard_margin"
        android:layout_marginBottom="64dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/eventRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addGroupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/add_group_button"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/secondaryColor"
        app:layout_constraintBottom_toBottomOf="@+id/groupRecyclerView"
        app:layout_constraintEnd_toEndOf="@+id/groupRecyclerView" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:text="@string/events"
        android:textSize="@dimen/regular_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/eventRecyclerView" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/eventRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginHorizontal="@dimen/standard_margin"
        android:layout_marginBottom="64dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/add_event_button"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/secondaryColor"
        app:layout_constraintBottom_toBottomOf="@+id/eventRecyclerView"
        app:layout_constraintEnd_toEndOf="@+id/eventRecyclerView" />

</androidx.constraintlayout.widget.ConstraintLayout>