<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:paddingVertical="32dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/eventDialogFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/primaryLightColor"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/cardview_elevation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:foregroundGravity="center_horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/eatWithView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:gravity="center"
                android:text="@string/lets_eat_with"
                android:textColor="@color/secondaryTextColor"
                android:textAlignment="center"
                android:textSize="@dimen/regular_header"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/onDateView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:gravity="center"
                android:text="@string/on_date"
                android:textAlignment="center"
                android:textSize="@dimen/regular_header"
                android:textStyle="bold"
                android:textColor="@color/secondaryTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/eatWithView" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/chooseDateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:text="@string/choose_date_button"
                android:elevation="24dp"
                android:textColor="@color/secondaryTextColor"
                app:backgroundTint="@color/primaryColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/onDateView" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/createEventRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/small_padding"
                app:layout_constraintBottom_toTopOf="@id/createEventButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chooseDateButton">


            </androidx.recyclerview.widget.RecyclerView>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/createEventButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:text="@string/create_event_button"
                android:backgroundTint="@color/primaryColor"
                android:elevation="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/secondaryTextColor"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</RelativeLayout>